# photocrispy

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
include/: content_browser.h  gl_photo_texture.h  image_processing.h  imageutils.h  imageviewer.h  main_app.h  opengl_compute_shader.h  opengl_framebuffer.h  opengl_rendering.h  opengl_shader.h  photo_shader.h  photocrispy.h  raw_processing.h  threaded_load.h
include/shaders/: histogram.comp  photo.frag  photo.vert  photo_fragment.shader  photo_vertex.shader  triangle_fragment.frag  triangle_vertex.shader  triangle_vertex.vert
src/: content_browser.cpp  gl_photo_texture.cpp  image_processing.cpp  imageutils.cpp  imageviewer.cpp  main_app.cpp  opengl_compute_shader.cpp  opengl_framebuffer.cpp  opengl_rendering.cpp  opengl_shader.cpp  photo_shader.cpp  photocrispy.cpp  raw_processing.cpp  threaded_load.cpp
